--- a/about-me.css
+++ b/about-me.css
@@ -1,23 +1,9 @@
-/*
- about-me.css --- about-me.html style;
-
- Copyright (C) 2014, 2015 Bruno Félix Rezende Ribeiro
-  <oitofelix@riseup.net>
-
- This program is free software; you can redistribute it and/or modify
- it under the terms of the GNU General Public License as published by
- the Free Software Foundation; either version 3, or (at your option)
- any later version.
-
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
-
- You should have received a copy of the GNU General Public License
- along with this program.  If not, see <http://www.gnu.org/licenses/>.
-*/
-
-p.big-first-letter::first-letter {
+#markdown p:nth-of-type(2) ::first-letter {
     font-size: xx-large;
+}
+
+#markdown img {
+    float: left;
+    border: 2px solid black;
+    margin-right: 4px;
 }
