--- a/about-this-site.css
+++ b/about-this-site.css
@@ -1,34 +1,9 @@
-/*
- about-this-site.css --- about-this-site.html style;
-
- Copyright (C) 2014, 2015 Bruno Félix Rezende Ribeiro
-  <oitofelix@riseup.net>
-
- This program is free software; you can redistribute it and/or modify
- it under the terms of the GNU General Public License as published by
- the Free Software Foundation; either version 3, or (at your option)
- any later version.
-
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
-
- You should have received a copy of the GNU General Public License
- along with this program.  If not, see <http://www.gnu.org/licenses/>.
-*/
-
-tr {
+table#jslicense-labels1 tr {
     background-color: darkgray !important;
 }
 
-tr.package-name td {
+table#jslicense-labels1 tr td:only-child {
     background: gray;
     text-align: center;
     font-weight: bold;
-}
-
-/* Personal information table */
-#personal-information-table {
-    font-family: monospace;
 }
