--- a/_layouts/oitofelix-homepage.html
+++ b/_layouts/oitofelix-homepage.html
@@ -30,7 +30,7 @@
     {% endif %}
 
     <style type="text/css">
-     .nav-bar a[href="{{ site.baseurl }}{% if site.baseurl != '' %}/{% endif %}{{ page.url }}"] {
+     .nav-bar a[href="{{ page.url | remove: 'index.html' }}"] {
 	 color: black;
 	 background-color: red;
 	 border-color: black;
