--- a/curriculum.css
+++ b/curriculum.css
@@ -5,6 +5,16 @@
     border: 4px solid black;
 }
 
+#markdown #face-bw img {
+    float: left;
+    border: 2px solid black;
+}
+
+#markdown #face-gray img {
+    float: right;
+    border: 2px solid black;
+}
+
 #markdown h3 {
     margin-bottom: 0px;
 }
