--- a/_layouts/oitofelix-homepage.html
+++ b/_layouts/oitofelix-homepage.html
@@ -42,7 +42,7 @@
     <meta name="keywords" content="{{ page.tags }}" />
 
     <!-- External resources -->
-    <link rel="stylesheet" href="{{ page.url | remove: '.html' | append: '.css'}}" />
+    <link rel="stylesheet" href="{{ site.baseurl | append: page.url | remove: '.html' | append: '.css'}}" />
 
     {% unless page.news == null %}
     <script src="/scripts/jquery-1.6.4.min.js"></script>
@@ -110,10 +110,17 @@
 	<footer>
 	  <div id="copyright-notice">
 
-	    <p>
-	      <strong>Copyright © 2014, 2015 Bruno Félix Rezende Ribeiro</strong>
-	    </p>
-
+	    {% case page.author %}
+	      {% when 'tilim' %}
+                <p>
+	          <strong>Copyright © 2015 César Augustus de Souza Garcia</strong>
+	        </p>
+	      {% else %}
+	        <p>
+	          <strong>Copyright © 2015 Bruno Félix Rezende Ribeiro</strong>
+	        </p>
+	      {% endcase %}
+		
 	    <p>
 	      <!-- CC BY-ND 4.0 -->
 	      {% if page.license == 'CC BY-ND 4.0' %}
