--- a/about-me.css
+++ b/about-me.css
@@ -1,4 +1,4 @@
-#markdown p:nth-of-type(2) ::first-letter {
+#markdown p:nth-of-type(2)::first-letter {
     font-size: xx-large;
 }
 
@@ -6,4 +6,8 @@
     float: left;
     border: 2px solid black;
     margin-right: 4px;
+}
+
+#markdown h3 {
+    margin-bottom: 0px;
 }
