--- a/_layouts/oitofelix-homepage.html
+++ b/_layouts/oitofelix-homepage.html
@@ -15,6 +15,7 @@
     <link rel="alternate" type="application/rss+xml"
 	  title="OITOFELIX homepage feed" href="/feed.xml" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="stylesheet" media="print" href="/styles/print.css" />
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/styles/navigation.css" />
 
