Change style of contact address in footer.

--- a/styles/base.css
+++ b/styles/base.css
@@ -67,8 +67,8 @@ hr {
 }
 
 footer address {
-    border: 2px solid orange;
-    background-color: yellow;
+    border: 1px solid red;
+    background-color: orange;
     padding: 4px;
     margin-top: 20px;
     text-align: center;
