--- a/styles/print.css
+++ b/styles/print.css
@@ -10,6 +10,6 @@ h1, h2, h3, h4, h5, h6 {
     page-break-after: avoid;
 }
 
-p, table, div.table {
+p, table, div.no-break {
     page-break-inside: avoid;
 }
