Change footer background color

--- a/styles/base.css
+++ b/styles/base.css
@@ -68,7 +68,7 @@ hr {
 
 footer address {
     border: 1px solid red;
-    background-color: orange;
+    background-color: antiquewhite;
     padding: 4px;
     margin-top: 20px;
     text-align: center;
