--- a/styles/print.css
+++ b/styles/print.css
@@ -13,3 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 p, table, div.no-break {
     page-break-inside: avoid;
 }
+
+a:active, a:visited, a:hover {
+    color: inherit;
+}
