--- a/_layouts/oitofelix-homepage.html
+++ b/_layouts/oitofelix-homepage.html
@@ -86,6 +86,9 @@
       <nav>
 	<ul class="nav-bar">
 
+	  <!-- <\!-- Front page -\-> -->
+	  <!-- <li><a href="/">Front page</a></li> -->
+
 	  <!-- Curriculum -->
 	  <li><a href="/curriculum.html">Curriculum</a></li>
 
@@ -175,14 +178,14 @@
 	    <!-- About this site -->
 	    <li><a href="/about-this-site.html#start">About this site</a></li>
 
-	    <!-- Licenses -->
-	    <li><a href="/about-this-site.html#licensing">Licensing</a></li>
+	    <!-- <\!-- Licenses -\-> -->
+	    <!-- <li><a href="/about-this-site.html#licensing">Licensing</a></li> -->
 
 	    <!-- Contact me -->
 	    <li><a href="/about-this-site.html#contact-me">Contact me</a></li>
 
-	    <!-- News -->
-	    <li><a href="/about-this-site.html#news">News</a></li>
+	    <!-- <\!-- News -\-> -->
+	    <!-- <li><a href="/about-this-site.html#news">News</a></li> -->
 
 	  </ul>
 	</nav>
@@ -197,33 +200,33 @@
 	</address>
 
 
-	<!-- ===================== Logos ===================== -->
-	<div id="footer-logos">
-	  <p>
-	    <span id="modification-time"><!--#echo var="LAST_MODIFIED"  --></span>
+<!-- 	<\!-- ===================== Logos ===================== -\-> -->
+<!-- 	<div id="footer-logos"> -->
+<!-- 	  <p> -->
+<!-- 	    <span id="modification-time"><\!--#echo var="LAST_MODIFIED"  -\-></span> -->
 
-	    <span id="logos">
-	      <a rel="jslicense" href="/about-this-site.html#javascript">
-		<img src="/images/librejs.png"
-		     title="JavaScript license information"
-		     alt="JavaScript license information"
-		     width="72" height="31" /></a>
-		<a href="http://validator.w3.org/check?uri=referer">
-		  <img src="/images/valid-html5.png"
-		       title="Validate HTML5"
-		       alt="Valid HTML 5" width="88" height="31" /></a>
-		  <a href="http://jigsaw.w3.org/css-validator/check/referer">
-		    <img src="/images/valid-css.png"
-			 title="Validate CSS"
-			 alt="Valid CSS" width="88" height="31" /></a>
-		    <a
-href="http://validator.w3.org/feed/check.cgi?url=http%3A//oitofelix.github.io/feed.xml">
-		      <img src="/images/valid-rss.png"
-			   title="Validate RSS feed"
-			   alt="Valid RSS" /></a>
-	    </span>
-	  </p>
-	</div>
+<!-- 	    <span id="logos"> -->
+<!-- 	      <a rel="jslicense" href="/about-this-site.html#javascript"> -->
+<!-- 		<img src="/images/librejs.png" -->
+<!-- 		     title="JavaScript license information" -->
+<!-- 		     alt="JavaScript license information" -->
+<!-- 		     width="72" height="31" /></a> -->
+<!-- 		<a href="http://validator.w3.org/check?uri=referer"> -->
+<!-- 		  <img src="/images/valid-html5.png" -->
+<!-- 		       title="Validate HTML5" -->
+<!-- 		       alt="Valid HTML 5" width="88" height="31" /></a> -->
+<!-- 		  <a href="http://jigsaw.w3.org/css-validator/check/referer"> -->
+<!-- 		    <img src="/images/valid-css.png" -->
+<!-- 			 title="Validate CSS" -->
+<!-- 			 alt="Valid CSS" width="88" height="31" /></a> -->
+<!-- 		    <a -->
+<!-- href="http://validator.w3.org/feed/check.cgi?url=http%3A//oitofelix.github.io/feed.xml"> -->
+<!-- 		      <img src="/images/valid-rss.png" -->
+<!-- 			   title="Validate RSS feed" -->
+<!-- 			   alt="Valid RSS" /></a> -->
+<!-- 	    </span> -->
+<!-- 	  </p> -->
+<!-- 	</div> -->
 
 
       </footer>
