--- a/_layouts/oitofelix-homepage.html
+++ b/_layouts/oitofelix-homepage.html
@@ -171,24 +171,24 @@
     <footer>
       <footer>
 
-	<!-- ===================== Navigation Menu ===================== -->
-	<nav>
-	  <ul class="nav-bar">
+	<!-- <\!-- ===================== Navigation Menu ===================== -\-> -->
+	<!-- <nav> -->
+	<!--   <ul class="nav-bar"> -->
 
-	    <!-- About this site -->
-	    <li><a href="/about-this-site.html#start">About this site</a></li>
+	<!--     <\!-- About this site -\-> -->
+	<!--     <li><a href="/about-this-site.html#start">About this site</a></li> -->
 
-	    <!-- <\!-- Licenses -\-> -->
-	    <!-- <li><a href="/about-this-site.html#licensing">Licensing</a></li> -->
+	<!--     <\!-- Licenses -\-> -->
+	<!--     <li><a href="/about-this-site.html#licensing">Licensing</a></li> -->
 
-	    <!-- Contact me -->
-	    <li><a href="/about-this-site.html#contact-me">Contact me</a></li>
+	<!--     <\!-- Contact me -\-> -->
+	<!--     <li><a href="/about-this-site.html#contact-me">Contact me</a></li> -->
 
-	    <!-- <\!-- News -\-> -->
-	    <!-- <li><a href="/about-this-site.html#news">News</a></li> -->
+	<!--     <\!-- News -\-> -->
+	<!--     <li><a href="/about-this-site.html#news">News</a></li> -->
 
-	  </ul>
-	</nav>
+	<!--   </ul> -->
+	<!-- </nav> -->
 
 
 	<!-- ===================== Contact information ===================== -->
