Make website responsive.
As I been working on my website and get some inpiration from yours,
notice that I could help it get more responsive with some few tweaks.

--- a/index.css
+++ b/index.css
@@ -33,6 +33,8 @@
     margin-left: auto;
     margin-right: auto;
     border: 4px solid black;
+    box-sizing: border-box;
+    max-width: 100%;
 }
 
 #curriculum #face-bw img {
