--- a/_layouts/oitofelix-homepage.html
+++ b/_layouts/oitofelix-homepage.html
@@ -11,6 +11,7 @@
     <!-- Metadata -->
     <meta charset="utf-8" />
     <meta name="author" content="Bruno Félix Rezende Ribeiro" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- External resources -->
     <!-- <link rel="author" href="/about-me.html" /> -->
